Changed to maven